--- a/Javascript/EnocaTask/index.html
+++ b/Javascript/EnocaTask/index.html
@@ -56,7 +56,7 @@
                   <a class="nav-link active" aria-current="page" href="index.html">Anasayfa</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Hakkımda</a>
+                  <a class="nav-link" href="about-us.html">Hakkımda</a>
                 </li>
 
                 <li class="nav-item">
